--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <script>
   const CLIENT_ID = "266074828468-grq0mdh6uikn50h0espr2abvofth4qkd.apps.googleusercontent.com";
   const API_KEY = "";
-  const SPREADSHEET_ID = "1cH-5GZmEdhTAI-768QAHA46vc4-ENXQEmfeMLJAmN8Q/edit?gid=1960005697#gid=1960005697";
+  const SPREADSHEET_ID = "https://docs.google.com/spreadsheets/d/1cH-5GZmEdhTAI-768QAHA46vc4-ENXQEmfeMLJAmN8Q/edit?gid=1960005697#gid=1960005697";
   
   const RANGE = "sh01!A:D";  // <-- YOUR sheet tab name
 
@@ -155,4 +155,5 @@
 //Replace:
 //YOUR_CLIENT_ID_HERE
 //YOUR_SPREADSHEET_ID_HERE
+
 
